@@ -26,7 +26,7 @@ public class AdminBlueprintDeleteCommand extends ConfirmableCommand
     @Override
     public void setup()
     {
-        this.inheritPermission();
+        setPermission("admin.blueprint.delete");
         this.setParametersHelp("commands.admin.blueprint.delete.parameters");
         this.setDescription("commands.admin.blueprint.delete.description");
     }
@@ -41,16 +41,16 @@ public class AdminBlueprintDeleteCommand extends ConfirmableCommand
             return false;
         }
 
-        String blueprintName = Util.sanitizeInput(args.get(0));
+        String blueprintName = Util.sanitizeInput(args.getFirst());
 
         // Check if blueprint exist
         if (this.getPlugin().getBlueprintsManager().getBlueprints(this.getAddon()).containsKey(blueprintName))
         {
             this.askConfirmation(user, user.getTranslation("commands.admin.blueprint.delete.confirmation"),
-                () -> {
-                    this.getPlugin().getBlueprintsManager().deleteBlueprint(this.getAddon(), blueprintName);
-                    user.sendMessage("commands.admin.blueprint.delete.success", TextVariables.NAME, blueprintName);
-                });
+                    () -> {
+                        this.getPlugin().getBlueprintsManager().deleteBlueprint(this.getAddon(), blueprintName);
+                        user.sendMessage("commands.admin.blueprint.delete.success", TextVariables.NAME, blueprintName);
+                    });
             return true;
         }
         else
