@@ -13,7 +13,28 @@ import world.bentobox.bentobox.util.IslandInfo;
 import world.bentobox.bentobox.util.Util;
 
 /**
+ * Handles the island info command (/island info).
+ * <p>
+ * This command displays detailed information about islands.
+ * It can show info for:
+ * <ul>
+ *   <li>The island at the player's current location (no arguments)</li>
+ *   <li>A specific player's island (player name as argument)</li>
+ * </ul>
+ * <p>
+ * Features:
+ * <ul>
+ *   <li>Console support</li>
+ *   <li>Tab completion for player names</li>
+ *   <li>Location-based island lookup</li>
+ *   <li>Player-based island lookup</li>
+ * </ul>
+ * <p>
+ * Permission: {@code island.info}
+ * Aliases: info, who
+ *
  * @author Poslovitch
+ * @since 1.0
  */
 public class IslandInfoCommand extends CompositeCommand {
 
@@ -29,6 +50,17 @@ public class IslandInfoCommand extends CompositeCommand {
         setDescription("commands.island.info.description");
     }
 
+    /**
+     * Displays island information based on command arguments.
+     * <p>
+     * Behavior:
+     * <ul>
+     *   <li>No args + Player: Shows info for island at current location</li>
+     *   <li>No args + Console: Shows help</li>
+     *   <li>Player name arg: Shows info for that player's island</li>
+     *   <li>Invalid args: Shows help</li>
+     * </ul>
+     */
     @Override
     public boolean execute(User user, String label, List<String> args) {
         if (args.size() > 1 || (args.isEmpty() && !user.isPlayer())) {
@@ -45,9 +77,9 @@ public class IslandInfoCommand extends CompositeCommand {
             return true;
         }
         // Get target player
-        UUID targetUUID = getPlayers().getUUID(args.get(0));
+        UUID targetUUID = getPlayers().getUUID(args.getFirst());
         if (targetUUID == null) {
-            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.get(0));
+            user.sendMessage("general.errors.unknown-player", TextVariables.NAME, args.getFirst());
             return false;
         }
         // Get island
@@ -61,9 +93,14 @@ public class IslandInfoCommand extends CompositeCommand {
         return true;
     }
 
+    /**
+     * Provides tab completion for online player names.
+     * Requires at least one character to be typed to prevent
+     * showing the full player list.
+     */
     @Override
     public Optional<List<String>> tabComplete(User user, String alias, List<String> args) {
-        String lastArg = !args.isEmpty() ? args.get(args.size()-1) : "";
+        String lastArg = !args.isEmpty() ? args.getLast() : "";
         if (lastArg.isEmpty()) {
             // Don't show every player on the server. Require at least the first letter
             return Optional.empty();
