@@ -1,60 +1,51 @@
-/**
- *
- */
 package world.bentobox.bentobox.api.localization;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.mock;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 
-import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.configuration.file.YamlConfiguration;
-import org.bukkit.inventory.ItemFactory;
 import org.bukkit.inventory.ItemStack;
-import org.bukkit.inventory.meta.BannerMeta;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
-import org.powermock.api.mockito.PowerMockito;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.modules.junit4.PowerMockRunner;
+
+import world.bentobox.bentobox.CommonTestSetup;
+import world.bentobox.bentobox.util.ItemParser;
 
 /**
  * Tests BentoBoxLocale class
  * @author tastybento
  *
  */
-@RunWith(PowerMockRunner.class)
-@PrepareForTest( { Bukkit.class })
-public class BentoBoxLocaleTest {
+class BentoBoxLocaleTest extends CommonTestSetup {
 
     private BentoBoxLocale localeObject;
-    private BannerMeta bannerMeta;
+    @Mock
+    private ItemStack  banner;
+   private  MockedStatic<ItemParser> mockedItemParser;
 
-    /**
-     */
-    @Before
+    @Override
+    @BeforeEach
     public void setUp() throws Exception {
-        PowerMockito.mockStatic(Bukkit.class);
-        // Mock item factory (for itemstacks)
-        ItemFactory itemFactory = mock(ItemFactory.class);
-        bannerMeta = mock(BannerMeta.class);
-        when(itemFactory.getItemMeta(any())).thenReturn(bannerMeta);
-        when(Bukkit.getItemFactory()).thenReturn(itemFactory);
-
+        super.setUp();
+        
+        mockedItemParser = Mockito.mockStatic(ItemParser.class, Mockito.RETURNS_MOCKS);
+        when(banner.getType()).thenReturn(Material.WHITE_BANNER);
+        mockedItemParser.when(() -> ItemParser.parse(anyString())).thenReturn(banner);
         Locale locale = Locale.US;
         YamlConfiguration config = new YamlConfiguration();
-        config.set("meta.banner", "WHITE_BANNER:1:STRIPE_SMALL:RED:SQUARE_TOP_RIGHT:CYAN:SQUARE_TOP_RIGHT:BLUE");
+        config.set("meta.banner", "WHITE_BANNER:1:SMALL_STRIPES:RED:SQUARE_TOP_RIGHT:CYAN:SQUARE_TOP_RIGHT:BLUE");
         List<String> authors = new ArrayList<>();
         authors.add("tastybento");
         authors.add("tastybento2");
@@ -63,16 +54,17 @@ public class BentoBoxLocaleTest {
         localeObject = new BentoBoxLocale(locale, config);
     }
 
-    @After
-    public void tearDown() {
-        Mockito.framework().clearInlineMocks();
+    @Override
+    @AfterEach
+    public void tearDown() throws Exception {
+        super.tearDown();
     }
 
     /**
      * Test method for {@link world.bentobox.bentobox.api.localization.BentoBoxLocale#get(java.lang.String)}.
      */
     @Test
-    public void testGet() {
+    void testGet() {
         assertEquals("test result", localeObject.get("reference.to.test"));
         assertEquals("missing.reference", localeObject.get("missing.reference"));
     }
@@ -81,7 +73,7 @@ public class BentoBoxLocaleTest {
      * Test method for {@link world.bentobox.bentobox.api.localization.BentoBoxLocale#getLanguage()}.
      */
     @Test
-    public void testGetLanguage() {
+    void testGetLanguage() {
         assertEquals(Locale.US.getDisplayLanguage(), localeObject.getLanguage());
         assertEquals("unknown", new BentoBoxLocale(null, new YamlConfiguration()).getLanguage());
     }
@@ -90,7 +82,7 @@ public class BentoBoxLocaleTest {
      * Test method for {@link world.bentobox.bentobox.api.localization.BentoBoxLocale#getCountry()}.
      */
     @Test
-    public void testGetCountry() {
+    void testGetCountry() {
         assertEquals(Locale.US.getDisplayCountry(), localeObject.getCountry());
         assertEquals("unknown", new BentoBoxLocale(null, new YamlConfiguration()).getCountry());
     }
@@ -99,7 +91,7 @@ public class BentoBoxLocaleTest {
      * Test method for {@link world.bentobox.bentobox.api.localization.BentoBoxLocale#toLanguageTag()}.
      */
     @Test
-    public void testToLanguageTag() {
+    void testToLanguageTag() {
         assertEquals(Locale.US.toLanguageTag(), localeObject.toLanguageTag());
         assertEquals("unknown", new BentoBoxLocale(null, new YamlConfiguration()).toLanguageTag());
     }
@@ -108,19 +100,17 @@ public class BentoBoxLocaleTest {
      * Test method for {@link world.bentobox.bentobox.api.localization.BentoBoxLocale#getBanner()}.
      */
     @Test
-    public void testGetBanner() {
-        ItemStack banner = localeObject.getBanner();
-        assertEquals(Material.WHITE_BANNER, banner.getType());
-        // Check that three patters were added
-        Mockito.verify(bannerMeta, Mockito.times(3)).addPattern(Mockito.any());
+    void testGetBanner() {
+        ItemStack localBanner = localeObject.getBanner();
+        assertEquals(Material.WHITE_BANNER, localBanner.getType());
     }
 
     /**
      * Test method for {@link world.bentobox.bentobox.api.localization.BentoBoxLocale#getAuthors()}.
      */
     @Test
-    public void testGetAuthors() {
-        assertEquals("tastybento", localeObject.getAuthors().get(0));
+    void testGetAuthors() {
+        assertEquals("tastybento", localeObject.getAuthors().getFirst());
         assertEquals("tastybento2", localeObject.getAuthors().get(1));
     }
 
@@ -128,7 +118,7 @@ public class BentoBoxLocaleTest {
      * Test method for {@link world.bentobox.bentobox.api.localization.BentoBoxLocale#merge(org.bukkit.configuration.file.YamlConfiguration)}.
      */
     @Test
-    public void testMerge() {
+    void testMerge() {
         YamlConfiguration config2 = new YamlConfiguration();
         config2.set("meta.banner", "SHOULD NOT BE MERGED");
         List<String> authors = new ArrayList<>();
@@ -141,7 +131,7 @@ public class BentoBoxLocaleTest {
         assertEquals("missing.reference", localeObject.get("missing.reference"));
         assertEquals("this is okay", localeObject.get("new.string"));
         assertEquals("test result", localeObject.get("reference.to.test"));
-        assertEquals("tastybento", localeObject.getAuthors().get(0));
+        assertEquals("tastybento", localeObject.getAuthors().getFirst());
         assertEquals("tastybento2", localeObject.getAuthors().get(1));
         assertEquals("new author", localeObject.getAuthors().get(2));
         assertEquals(3, localeObject.getAuthors().size());
@@ -151,7 +141,7 @@ public class BentoBoxLocaleTest {
      * Test method for {@link world.bentobox.bentobox.api.localization.BentoBoxLocale#contains(java.lang.String)}.
      */
     @Test
-    public void testContains() {
+    void testContains() {
         assertTrue(localeObject.contains("reference.to.test"));
         assertFalse(localeObject.contains("false.reference.to.test"));
     }
